# GDevelop-documentation

./: .gitignore  .markdownlint.json  CLAUDE.md  CNAME  CONTRIBUTE.md  Lukasnaruto778  README.md  ROAD CROSSER  SYNTAX.md  automated_updates_data.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.circleci/: config.yml
GDCore Documentation/: _2home_2circleci_2repo_2_g_develop_2_core_2_g_d_core_2_extensions_2_metadata_2_dependency_metadata_8h-example.html  _abstract_events_based_entity_8h_source.html  _abstract_file_system_8h_source.html  _abstract_function_metadata_8h_source.html  _all_builtin_extensions_8h_source.html  _animation_8h_source.html  _arbitrary_behavior_shared_data_worker_8h_source.html  _arbitrary_event_based_behaviors_worker_8h_source.html  _arbitrary_events_functions_worker_8h_source.html  _arbitrary_events_worker_8h_source.html  _arbitrary_objects_worker_8h_source.html  _arbitrary_resource_worker_8h_source.html  _asset_resource_path_cleaner_8h_source.html  _async_event_8h_source.html  _behavior_8h_source.html  _behavior_configuration_container_8h_source.html  _behavior_default_flag_clearer_8h_source.html  _behavior_metadata_8h_source.html  _behavior_object_type_renamer_8h_source.html  _behavior_parameter_filler_8h_source.html  _behavior_parameters_filler_8h_source.html  _behavior_property_renamer_8h_source.html  _behavior_type_renamer_8h_source.html  _behaviors_container_8h_source.html  _behaviors_shared_data_8h_source.html  _behaviors_shared_data_behavior_type_renamer_8h_source.html  _binary_serializer_8h_source.html  _capture_options_8h_source.html  _comment_event_8h_source.html  (+1219 more)
(+3019 files in other folders)
