[tool.poetry]
name = "gdevelop-documentation"
version = "0.1.0"
description = "GDevelop wiki made with Wiki.js"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^9.6.21"
mkdocs-redirects = "^1.2.0"
mkdocs-awesome-pages-plugin = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
